trasnformando em pwa

--- a/offline.html
+++ b/offline.html
@@ -6,20 +6,13 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@700;800&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <link rel="manifest" href="public/manifest.json"
-
+  
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
-
-    <script>
-      if (typeof navigator.serviceWorker != 'undefined') {
-        navigator.serviceWorker.register('pwabuilder-sw.js')
-      }
-    </script>
   </head>
   <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+   <h1>Offline</h1>
   </body>
 </html>
